--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,3 +1,7 @@
-<p>
-  header works!
-</p>
+<header class="header">
+  <div class="logo">
+    <a [routerLink]="['/']">
+      <img src="./assets/img/coubuy_logo.png" class="expanded">
+    </a>
+  </div>
+</header>
