layout/sidenav updated

--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -18,4 +18,4 @@
       backface-visibility: hidden;
       -webkit-overflow-scrolling: touch
 }
-.centent{margin:64px 24px 24px 224px}
+.content{margin:64px 24px 24px 224px}
