--- a/src/app/routes/order/new/new.component.html
+++ b/src/app/routes/order/new/new.component.html
@@ -1,3 +1,3 @@
-<p>
-  new works!
-</p>
+<nz-content style="padding: 24px; min-height: 280px">
+  <div nz-row [nzGutter]="24"></div>
+</nz-content> 
