--- a/src/app/routes/order/todo/todo.component.html
+++ b/src/app/routes/order/todo/todo.component.html
@@ -1,3 +1,23 @@
-<p>
-  todo works!
-</p>
+<nz-content style="padding: 24px; min-height: 280px">
+  <div nz-row [nzGutter]="24">
+    <div nz-col [nzSpan]="16">
+      <div *ngIf="loading">
+        <div *ngFor="let order of orders">
+          <nz-card [nzBordered]="false" [nzNoHovering]="true" *ngIf="order.status === 2">
+            <ng-template #title> <span>订单号： {{order.ordernum}}</span></ng-template>
+            <ng-template #body>
+              <div class="list-header">
+                <div class="list-title">
+                  <span>{{order.userinfo.name}}</span>
+                </div>
+                <div class="phone">
+                  
+                </div>
+              </div>
+            </ng-template>
+          </nz-card>
+        </div>
+      </div>
+    </div>
+  </div>
+</nz-content>
