--- a/src/app/routes/order/urge/urge.component.html
+++ b/src/app/routes/order/urge/urge.component.html
@@ -1,3 +1,18 @@
-<p>
-  urge works!
-</p>
+<nz-content style="padding:24px ; min-height: 280px;">
+  <div nz-row [nzGutter]="24">
+    <div nz-col [nzSpan]="16">
+      <nz-card [nzBordered]="false" [nzNoHovering]="true">
+        <ng-template #body>TODO：用户催单</ng-template>
+      </nz-card>
+    </div>
+    <div nz-col [nzSpan]="8">
+      <nz-card [nzBordered]="false" [nzNoHovering]="true" >
+        <ng-template #title>今日营业总览：</ng-template>
+        <ng-template #body>
+          <p>订单量：514</p>
+          <p>营业额：5140</p>
+        </ng-template>
+      </nz-card>
+    </div>
+  </div>
+</nz-content>
