--- a/src/app/routes/order/urge/urge.component.html
+++ b/src/app/routes/order/urge/urge.component.html
@@ -2,7 +2,7 @@
   <div nz-row [nzGutter]="24">
     <div nz-col [nzSpan]="16">
       <nz-card [nzBordered]="false" [nzNoHovering]="true">
-        <ng-template #body>TODO：用户催单</ng-template>
+        <ng-template #title>TODO：用户催单</ng-template>
       </nz-card>
     </div>
     <div nz-col [nzSpan]="8">
