--- a/src/app/routes/goods/libs/libs.component.html
+++ b/src/app/routes/goods/libs/libs.component.html
@@ -1,3 +1,62 @@
-<p>
-  libs works!
-</p>
+<div nz-row [nzGutter]="24" class="pt-lg">
+  <div nz-col [nzSpan]="24" style="padding-bottom:24px">
+    <button nz-button [nzType]="'primary'" (click)="showModal()">
+      <i class="anticon anticon-plus-circle"></i>新增商品
+    </button>
+  </div>
+  <div nz-col [nzSpan]="6" *ngIf="!loading">
+    <nz-card [nzBordered]="false" [nzNoHovering]="true">
+      <ng-template #body>列表为空</ng-template>
+    </nz-card>
+  </div>
+  <div nz-col [nzSpan]="6" *ngFor="let good of goods">
+    <nz-card [nzBordered]="false" [nzNoHovering]="true" class="goods">
+      <ng-template #body>
+        <div class="goods-detail">
+          <div class="goos-desc">
+            <div class="goods-title">{{good.goods_name}}</div>
+            <div class="good-price">￥ {{(good.price/100).toFixed(2)}}</div>
+            <div><nz-tag [nzColor]="'red'">{{good.tag}}</nz-tag></div>
+            <div>{{good.spec}}</div>
+            <div>{{good.description}}</div>
+          </div>
+          <div class="goods-img"><img src="{{good.pic}}" alt=""></div>
+        </div>
+        <div class="goods-handle">
+          <button nz-button [nzType]="'default'" (click)="showEditModal(good)">编辑</button>
+          <button nz-button [nzType]="'danger'">删除</button>
+        </div>
+      </ng-template>
+    </nz-card>
+  </div>
+  <nz-modal [nzVisible]="isVisible" [nzTitle]="'新增商品'" [nzContent]="modalContent"  [nzFooter]="modalFooter"
+                    (nzOnCancel)="handleCancel($event)" [nzWrapClassName]="'goods-modal'">
+    <ng-template #modalContent>
+      <div nz-row [nzGutter]="24">
+        <div nz-col [nzSpan]="10">
+          <form nz-form [nzLayout]="'horizontal'" [formGroup]="validateForm" (ngSubmit)="handleOk()">
+            <div nz-form-item nz-row>
+              <div nz-form-label nz-col [nzSm]="6">
+                <label nz-form-item-required>商品名称</label>
+              </div>
+              <div nz-form-control nz-col [nzSm]="14">
+                <nz-input [nzSize]="'large'" formControlName="goods_name" [nzType]="'text'"
+                                [nzId]="'goods_name'" [nzPlaceHolder]="'商品名称'"></nz-input>
+              </div>
+            </div>
+            <div nz-form-item nz-row>
+              <div nz-form-label nz-col [nzSm]="6">
+                <label nz-form-item-required>商品价格</label>
+              </div>
+              <div nz-form-control nz-col [nzSm]="14">
+                <nz-input [nzSize]="'large'" formControlName="price"
+                                [nzType]="'text'" [nzId]="'price'"></nz-input>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </ng-template>
+    <ng-template #modalFooter></ng-template>
+  </nz-modal>
+</div>
