--- a/src/app/routes/pages/login/login.component.html
+++ b/src/app/routes/pages/login/login.component.html
@@ -1,3 +1,11 @@
-<p>
-  login works!
-</p>
+<div class="wrapper">
+  <div class="abs-center mt-lg width-lg">
+    <nz-card style="width:300px;" [nzBordered]="false" [nzNoHovering]="true">
+      <ng-template #title>登录</ng-template>
+      <ng-template #body>
+        <h1>你还没登录</h1>
+        <a href="http://www.coinect.cn" target="_blank">点击登录</a>
+      </ng-template>
+    </nz-card>
+  </div>
+</div>
