--- a/src/app/routes/goods/libs/libs.component.html
+++ b/src/app/routes/goods/libs/libs.component.html
@@ -20,15 +20,19 @@
             <div>{{good.spec}}</div>
             <div>{{good.description}}</div>
           </div>
-          <div class="goods-img"><img src="{{good.pic}}" alt=""></div>
+          <div class="goods-img">
+            <img src="{{good.pic}}" alt="">
+            <!-- <img [src]="imgurl" alt=""> -->
+          </div>
         </div>
         <div class="goods-handle">
           <button nz-button [nzType]="'default'" (click)="showEditModal(good)">编辑</button>
-          <button nz-button [nzType]="'danger'">删除</button>
+          <button nz-button [nzType]="'danger'" (click)="goodsDel(good)">删除</button>
         </div>
       </ng-template>
     </nz-card>
   </div>
+  <!-- 增加商品 -->
   <nz-modal [nzVisible]="isVisible" [nzTitle]="'新增商品'" [nzContent]="modalContent"  [nzFooter]="modalFooter"
                     (nzOnCancel)="handleCancel($event)" [nzWrapClassName]="'goods-modal'">
     <ng-template #modalContent>
@@ -89,15 +93,250 @@
                 <label nz-form-item-required>商品描述</label>
               </div>
               <div nz-form-control nz-col [nzSm]="14">
-                <nz-input [nzSize]="'large'" formControlName="decription" [nzType]="'textarea'" 
+                <nz-input [nzSize]="'large'" formControlName="description" [nzType]="'textarea'" 
                                 [nzId]="'description'" [nzPlaceHolder]="'商品描述（140字以内）'"></nz-input>
               </div>
             </div>
           </form>
         </div>
-        
+        <div nz-col [nzSpan]="14">
+          <nz-table #nzTable [nzDataSource]="files" [nzCustomNoResult]="true" [nzIsPagination]="false">
+            <div noResult>请选择上传文件</div>
+            <thead nz-thead>
+              <tr>
+                <th nz-th>文件名字</th>
+                <th nz-th>文件大小</th>
+                <th nz-th>进度</th>
+                <th nz-th>状态</th>
+                <th nz-th>操作</th>
+              </tr>
+            </thead>
+            <tbody nz-tbody>
+              <tr nz-tbody-tr *ngFor="let item of nzTable.data">
+                <td nz-td> <strong>{{item?.file?.name}}</strong> </td>
+                <td nz-td *ngIf="uploader.options.isHTML5" nowrap>
+                  {{ item?.file?.size/1024/1024 | number:'.2' }}MB
+                </td>
+                <td nz-td *ngIf="uploader.options.isHTML5">
+                  <nz-progress [ngModel]="item.progress" [nzStrokeWidth]="5"></nz-progress>
+                </td>
+                <td nz-td class="text-center">
+                  <span *ngIf="item.isSuccess">
+                    <nz-tag [nzColor]="'green'"></nz-tag>
+                  </span>
+                  <span *ngIf="item.isCancel" class="mr-md">
+                    <nz-tag [nzColor]="'orange'"></nz-tag>
+                  </span>
+                  <span *ngIf="item.isError">
+                    <nz-tag [nzColor]="'red'"></nz-tag>
+                  </span>
+                </td>
+                <td nz-td nowrap>
+                  <nz-button-group>
+                    <button nz-button (click)="uploadFile()" [nzType]="'primary'"
+                                  [disabled]="item.isReady || item.isUploading">
+                                  <i class="anticon anicon-upload"></i>
+                    </button>
+                    <button nz-button (click)="item.cancel()" [disabled]="!item.isUploading">
+                                  <i class="anticon  ants"></i>               
+                    </button>
+                    <button nz-butto (click)="item.remove()">
+                      <i class="anticon anticon-delete"></i>
+                    </button>
+                  </nz-button-group>
+                </td>
+              </tr>
+            </tbody>
+          </nz-table>
+          <nz-card [nzBordered]="false" [nzNoHovering]="true">
+            <ng-template #body>
+              <nz-progress [ngModel]="uploader.progress" [nzStrokeWidth]="5"></nz-progress>
+              <nz-button-group class="mt-md d-block">
+                <button nz-button (click)="uploadFile()" [nzType]="'primary'" [nzLoading]="uploader.isUploading"
+                            [disabled]="!uploader.getNotUploadedItems().length">
+                    <i class="anticon anticon-upload"></i>上传
+                </button>
+                <button nz-button (click)="uploader.cancelAll()" [disabled]="!uploader.isUploading">
+                  <i class="anticon anticon-close"></i>取消
+                </button>
+                <button nz-button (click)="uploader.clearQueue()" [disabled]="!uploader.queue.length">
+                  <i class="anticon anticon-delete"></i>移除照片
+                </button>
+              </nz-button-group>
+            </ng-template>
+          </nz-card>
+        </div>
       </div>
     </ng-template>
-    <ng-template #modalFooter></ng-template>
+    <ng-template #modalFooter>
+      <button nz-button [nzType]="'default'" [nzSize]="'large'" (click)="handleCancel($event)">
+        返 回
+      </button>
+      <button nz-button [nzType]="'primary'" [nzSize]="'large'" (click)="handleOk()" [disabled]="!validateForm.valid"
+              [nzLoading]="isConfirmLoading">
+        提 交
+      </button>
+    </ng-template>
+  </nz-modal>
+  <!-- 编辑商品 -->
+  <nz-modal [nzVisible]="isVisible_edit" [nzTitle]="'编辑商品'" [nzContent]="modalContent_edit"
+            [nzFooter]="modalFooter_edit"
+            (nzOnCancel)="editCancel($event)" [nzWrapClassName]="'goods-modal'">
+    <ng-template #modalContent_edit>
+      <div nz-row [nzGutter]="24" *ngIf="good_tmp">
+        <div nz-col [nzSpan]="10">
+          <form nz-form [nzLayout]="'horizontal'" [formGroup]="validateForm_t" (ngSubmit)="handleOk()">
+
+            <div nz-form-item nz-row>
+              <div nz-form-label nz-col [nzSm]="6">
+                <label nz-form-item-required>商品名称</label>
+              </div>
+              <div nz-form-control nz-col [nzSm]="14">
+                <nz-input [nzSize]="'large'" formControlName="id_t" [nzType]="'text'" [nzId]="'id_t'"
+                          [nzPlaceHolder]="'商品名称'" [(ngModel)]="good_tmp.id" style="display: none"></nz-input>
+                <nz-input [nzSize]="'large'" formControlName="goods_name_t" [nzType]="'text'" [nzId]="'goods_name_t'"
+                          [nzPlaceHolder]="'商品名称'" [(ngModel)]="good_tmp.goods_name"></nz-input>
+              </div>
+            </div>
+
+            <div nz-form-item nz-row>
+              <div nz-form-label nz-col [nzSm]="6">
+                <label nz-form-item-required>商品价格</label>
+              </div>
+              <div nz-form-control nz-col [nzSm]="14">
+                <nz-input [nzSize]="'large'" formControlName="price_t" [nzType]="'text'" [nzId]="'price_t'"
+                          [nzPlaceHolder]="'商品价格'" [(ngModel)]="good_tmp.price2"></nz-input>
+              </div>
+            </div>
+
+            <div nz-form-item nz-row>
+              <div nz-form-label nz-col [nzSm]="6">
+                  <label nz-form-item-required>商品图片</label>
+                </div>
+                <div nz-form-control nz-col [nzSm]="14">
+                  <nz-input [nzSize]="'large'" formControlName="img_t"
+                                  [nzType]="'text'" [nzId]="'img_t'" 
+                                  [(ngModel)]="imgurl" style="display:none"></nz-input>
+                  <input type="file" id="file1" accept ng2FileSelect [uploader]="uploader"
+                              (change)="selectedFileOnChanged($event)">
+              </div>
+            </div>
+<!-- 
+            <div nz-form-item nz-row>
+            <div nz-form-label nz-col [nzSm]="6">
+            <label>预览</label>
+            </div>
+            <div nz-form-control nz-col [nzSm]="14">
+            <img src="{{imgurl}}" width="200"/>
+            </div>
+            </div> 
+-->
+
+            <div nz-form-item nz-row>
+              <div nz-form-label nz-col [nzSm]="6">
+                <label>商品标签</label>
+              </div>
+              <div nz-form-control nz-col [nzSm]="14">
+                <nz-select formControlName="tag_t" [nzSize]="'large'" [nzPlaceHolder]="'商品标签'"
+                           [(ngModel)]="good_tmp.tag">
+                  <nz-option [nzLabel]="'热卖'" [nzValue]="'热卖'"></nz-option>
+                  <nz-option [nzLabel]="'新品'" [nzValue]="'新品'"></nz-option>
+                </nz-select>
+              </div>
+            </div>
+
+            <div nz-form-item nz-row>
+              <div nz-form-label nz-col [nzSm]="6">
+                <label nz-form-item-required>商品描述</label>
+              </div>
+              <div nz-form-control nz-col [nzSm]="14">
+                <nz-input [nzSize]="'large'" formControlName="description_t" [nzType]="'textarea'"
+                          [nzId]="'description_t'"
+                          [nzPlaceHolder]="'商品描述(140字内)'" [(ngModel)]="good_tmp.description"></nz-input>
+              </div>
+            </div>
+          </form>
+        </div>
+
+        <div nz-col [nzSpan]="14">
+          当前图片：<img src="{{good_tmp.pic}}" style="vertical-align:middle;width:100px;"/>
+            
+            <nz-table #nzTable [nzDataSource]="files" [nzCustomNoResult]="true" [nzIsPagination]="false">
+              <div noResult>请选择新的图片</div>
+              <thead nz-thead>
+                <tr>
+                  <th nz-th>文件名字</th>
+                  <th nz-th>文件大小</th>
+                  <th nz-th>进度</th>
+                  <th nz-th>状态</th>
+                  <th nz-th>操作</th>
+                </tr>
+              </thead>
+              <tbody nz-tbody>
+                <tr nz-tbody-tr *ngFor="let item of nzTable.data">
+                  <td nz-td> <strong>{{item?.file?.name}}</strong> </td>
+                  <td nz-td *ngIf="uploader.options.isHTML5" nowrap>
+                    {{ item?.file?.size/1024/1024 | number:'.2' }}MB
+                  </td>
+                  <td nz-td *ngIf="uploader.options.isHTML5">
+                    <nz-progress [ngModel]="item.progress" [nzStrokeWidth]="5"></nz-progress>
+                  </td>
+                  <td nz-td class="text-center">
+                    <span *ngIf="item.isSuccess">
+                      <nz-tag [nzColor]="'green'"></nz-tag>
+                    </span>
+                    <span *ngIf="item.isCancel" class="mr-md">
+                      <nz-tag [nzColor]="'orange'"></nz-tag>
+                    </span>
+                    <span *ngIf="item.isError">
+                      <nz-tag [nzColor]="'red'"></nz-tag>
+                    </span>
+                  </td>
+                  <td nz-td nowrap>
+                    <nz-button-group>
+                      <button nz-button (click)="uploadFile()" [nzType]="'primary'"
+                                    [disabled]="item.isReady || item.isUploading">
+                                    <i class="anticon anicon-upload"></i>
+                      </button>
+                      <button nz-button (click)="item.cancel()" [disabled]="!item.isUploading">
+                                    <i class="anticon  ants"></i>               
+                      </button>
+                      <button nz-butto (click)="item.remove()">
+                        <i class="anticon anticon-delete"></i>
+                      </button>
+                    </nz-button-group>
+                  </td>
+                </tr>
+              </tbody>
+            </nz-table>
+            <nz-card [nzBordered]="false" [nzNoHovering]="true">
+              <ng-template #body>
+                <nz-progress [ngModel]="uploader.progress" [nzStrokeWidth]="5"></nz-progress>
+                <nz-button-group class="mt-md d-block">
+                  <button nz-button (click)="uploadFile()" [nzType]="'primary'" [nzLoading]="uploader.isUploading"
+                              [disabled]="!uploader.getNotUploadedItems().length">
+                      <i class="anticon anticon-upload"></i>上传
+                  </button>
+                  <button nz-button (click)="uploader.cancelAll()" [disabled]="!uploader.isUploading">
+                    <i class="anticon anticon-close"></i>取消
+                  </button>
+                  <button nz-button (click)="uploader.clearQueue()" [disabled]="!uploader.queue.length">
+                    <i class="anticon anticon-delete"></i>移除照片
+                  </button>
+                </nz-button-group>
+              </ng-template>
+            </nz-card>
+      </div>
+      </div>
+    </ng-template>
+    <ng-template #modalFooter_edit>
+      <button nz-button [nzType]="'default'" [nzSize]="'large'" (click)="editCancel($event)">
+        返 回
+      </button>
+      <button nz-button [nzType]="'primary'" [nzSize]="'large'" (click)="editOk()" [disabled]="!validateForm_t.valid"
+              [nzLoading]="isConfirmLoading">
+        提 交
+      </button>
+    </ng-template>
   </nz-modal>
 </div>
