商品编辑可以更改图片

--- a/src/app/routes/goods/sell/sell.component.html
+++ b/src/app/routes/goods/sell/sell.component.html
@@ -53,7 +53,7 @@
             <button nz-button [nzType]="'dashed'">删除分类</button>
           </div>
           <div nz-col [nzSpan]="8" *ngFor="let good of c.goods">
-            <nz-card [nzNoHovering]="true" class="goods">
+            <nz-card [nzNoHovering]="true" class="goods" *ngIf="good.info">
               <ng-template #body>
                 <div class="goods-detail">
                   <div class="goods-desc">
