--- a/src/app/routes/pages/login/login.component.html
+++ b/src/app/routes/pages/login/login.component.html
@@ -1,11 +1,50 @@
+<header class="header">
+  <div class="logo">
+    <a [routerLink]="['/']">
+      <img class="expanded" src="./assets/img/coubuy_logo.png" alt="" style="max-height:40px;" />
+    </a>
+  </div>
+  <p class="title">登录页</p>
+</header>
+
 <div class="wrapper">
   <div class="abs-center mt-lg width-lg">
-    <nz-card style="width:300px;" [nzBordered]="false" [nzNoHovering]="true">
-      <ng-template #title>登录</ng-template>
-      <ng-template #body>
-        <h1>你还没登录</h1>
-        <a href="http://www.coinect.cn" target="_blank">点击登录</a>
-      </ng-template>
-    </nz-card>
+    <form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="login()">
+      <div nz-form-item>
+        <div nz-form-control>
+          <nz-input formControlName="userName" [nzPlaceHolder]="'请输入用户名'" [nzSize]="'large'">
+            <ng-template #prefix>
+              <i class="anticon anticon-user"></i>
+            </ng-template>
+          </nz-input>
+          <div nz-form-explain 
+          *ngIf="validateForm.controls.userName.dirty&&validateForm.controls.userName.hasError('required')">
+          请输入用户名
+        </div>
+        </div>
+      </div>
+      <div nz-form-item>
+        <div nz-form-control>
+          <nz-input formControlName="password" [nzType]="'password'" [nzPlaceHolder]="'请输入密码'" [nzSize]="'large'">
+            <ng-template #prefix>
+              <i class="anticon anticon-lock"></i>
+            </ng-template>
+          </nz-input>
+          <div nz-form-explain 
+          *ngIf="validateForm.controls.password.dirty&&validateForm.controls.password.hasError('required')">
+          请输入密码
+        </div>
+        </div>
+      </div>
+      <div nz-form-item>
+        <div nz-form-control>
+          <label nz-checkbox formControlName="remember">
+            <span>记住密码</span>
+          </label>
+          <a class="login-form-forgot" class="login-form-forgot">忘记密码</a>
+          <button nz-button class="login-form-button" [nzType]="'primary'" [nzSize]="'large'" (click)="login()">登录</button>
+        </div>
+      </div>
+    </form>
   </div>
 </div>
