--- a/src/app/routes/goods/libs/libs.component.html
+++ b/src/app/routes/goods/libs/libs.component.html
@@ -12,7 +12,7 @@
       </ng-template>
     </nz-card>
   </div>
-  <!-- 循环遍历所有商品，初始化N条商品，下拉加载 -->
+  <!-- 循环遍历所有商品，初始化N条商品，TODO : 下拉加载 -->
   <div nz-col [nzSpan]="6" *ngFor="let good of goods" >
     <nz-card [nzBordered]="false" [nzNoHovering]="true" class="goods" >
       <ng-template #body>
