--- a/src/app/routes/goods/libs/libs.component.scss
+++ b/src/app/routes/goods/libs/libs.component.scss
@@ -11,3 +11,18 @@
             padding-bottom: 5px;
       }
 }
+.totop{
+      position: fixed;
+      right:10px;
+      bottom:10px;
+      width:50px;
+      height:50px;
+      text-align: center;
+      line-height: 66px;
+      background-color:#F5F7FA;
+      border:1px solid #ddd;
+      border-radius: 50%;
+}
+.totop:hover{
+      background-color: #a1a2a3;
+}
