--- a/src/app/routes/pages/login/login.component.scss
+++ b/src/app/routes/pages/login/login.component.scss
@@ -13,6 +13,7 @@
 }
 .width-lg {
   width: 320px!important;
+  height:500px!important;
 }
 .mt-lg {
   margin-top: 120px!important;
@@ -33,4 +34,8 @@
   right:50%;
   font-size: 21px;
   color:#fff;
+}
+.alert{
+  font-size:12px;
+  color:#f00;
 }
