--- a/src/app/routes/goods/sell/sell.component.html
+++ b/src/app/routes/goods/sell/sell.component.html
@@ -1,6 +1,13 @@
 <div nz-row [nzGutter]="24" class="pt-lg">
   <!-- 展示与新建门店模板暂不做处理 -->
   <!-- 
+    杀人案？自杀？不可能犯罪？
+    从楼顶跃下，定案为自杀
+    没有任何自杀的理由，
+    阿花，小天，昆哥，王明
+    被晕倒，被人从楼顶扔下去，造成自杀的假象
+    大魔王为了挑战夏至，从他身边的人下手，
+    昆哥开车刹车失灵，伪装成意外，阿花食物中毒，小天被溺，夏至救之
       <div nz-col [nzSpan]="24" style="margin-bottom: 24px">
       <button nz-button [nzType]="'default'">
         <nz-popconfirm [nzTitle]="'是否新建门店模板？'" (nzOnConfirm)="confirm()" (nzOnCancel)="cancel()">
@@ -102,5 +109,4 @@
         </nz-card>
       </div>
   </div>
-  
-  
+    
